deployment.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $FRONTEND_PROJECT_NAME
  namespace: xinfa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - $FRONTEND_URL
      secretName: $FRONTEND_PROJECT_NAME
  rules:
  - host: $FRONTEND_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $FRONTEND_PROJECT_NAME
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: $FRONTEND_PROJECT_NAME
  namespace: xinfa
  labels:
    app: $FRONTEND_PROJECT_NAME
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: $FRONTEND_PROJECT_NAME
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $FRONTEND_PROJECT_NAME
  namespace: xinfa
  labels:
    app: $FRONTEND_PROJECT_NAME
spec:
  selector:
    matchLabels:
      app: $FRONTEND_PROJECT_NAME
  template:
    metadata:
      labels:
        app: $FRONTEND_PROJECT_NAME
    spec:
      containers:
        - name: $FRONTEND_PROJECT_NAME
          image: git.caspen-tech.com:5050/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME:$FRONTEND_PROJECT_NAME-$CI_COMMIT_SHORT_SHA
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
      imagePullSecrets:
        - name: gitlab-registry
